--- a/styles.css.scss
+++ b/styles.css.scss
@@ -100,10 +100,15 @@
 		h1 {
 			font-size: 20px;
 			font-weight: bold;
+			margin-bottom: 10px;
+		}
+
+		p {
+			margin-bottom: 10px;
 		}
 
 		@media (max-width: 990px) {
-		width: 35%;
+			width: 35%;
 		}
 }
 
@@ -118,6 +123,11 @@
 		h1 {
 			font-size: 20px;
 			font-weight: bold;
+			margin-bottom: 10px;
+		}
+
+		p {
+			margin-bottom: 10px;
 		}
 
 		@media (max-width: 990px) {
